# candidate-test-application

./: CMakeLists.txt  README.md
include/: errors.h  errors.hpp
include/drivers/MotorController/: MotorController.hpp
include/drivers/TemperatureSensor/: TemperatureSensor.hpp
src/: main.cpp
src/drivers/MotorController/: MotorController.cpp
src/drivers/TemperatureSensor/: TemperatureSensor.cpp
